list align solved

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1016,8 +1016,6 @@ footer section article h4{
 
 .hero-project-details ul li{
    margin: 15px 0;
-   display: flex;
-   align-items: center;
 }
 
 
